# google-cloud-rust

./: Cargo.toml
foundation/auth/: Cargo.toml
foundation/auth/src/token_source/: authorized_user_token_source.rs
foundation/gax/: Cargo.toml
foundation/longrunning/: Cargo.toml
foundation/metadata/: Cargo.toml
googleapis/: Cargo.toml  build-manifest.toml
googleapis/src/: google.api.rs  google.r#type.rs
pubsub/: Cargo.toml
pubsub/src/: subscription.rs
spanner/: Cargo.toml
spanner-derive/: Cargo.toml
spanner/src/: client.rs  transaction_rw.rs
storage/: Cargo.toml
