[workspace]
members = [
    "foundation/metadata",
    "foundation/gax",
    "foundation/longrunning",
    "foundation/auth",
    "googleapis",
    "spanner",
    "pubsub",
    "storage",
]

[patch.crates-io]
prost = { git = "https://github.com/EmbarkStudios/prost", rev = "5281972" }
prost-build = { git = "https://github.com/EmbarkStudios/prost", rev = "5281972" }
prost-types = { git = "https://github.com/EmbarkStudios/prost", rev = "5281972" }
prost-derive = { git = "https://github.com/EmbarkStudios/prost", rev = "5281972" }
